--- a/index.html
+++ b/index.html
@@ -15,7 +15,17 @@
 
 
         <div class="card">
-            
+            <img class="card__img" src="images/illustration-article.svg" alt="">
+            <div class="card__tag"><p>Learning</p></div>
+            <p class="card__text-published">Published 21 Dec 2023</p>
+            <h1 class="card__text-title">HTML & CSS foundations</h1>
+            <p class="card__text-description">These languages are the backbone of every website, defining structure, content, and presentation.</p>
+
+
+            <div class="card__author">
+                <img class="card__author-img" src="images/image-avatar.webp" alt="">
+                <p class="card__author-text">Greg Hooper</p>
+            </div>
         </div>
 
     
