--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
 
         <div class="card">
-            <img class="card__img" src="images/illustration-article.svg" alt="">
+            <img class="card__img" src="images/illustration-article.svg" alt="graphic showing the course">
             <div class="card__tag"><p>Learning</p></div>
             <p class="card__text-published">Published 21 Dec 2023</p>
             <h1 class="card__text-title">HTML & CSS foundations</h1>
@@ -23,7 +23,7 @@
 
 
             <div class="card__author">
-                <img class="card__author-img" src="images/image-avatar.webp" alt="">
+                <img class="card__author-img" src="images/image-avatar.webp" alt="Image of author">
                 <p class="card__author-text">Greg Hooper</p>
             </div>
         </div>
